--- a/data/rules.yml
+++ b/data/rules.yml
@@ -17,6 +17,7 @@ rules:
   - action: utter_confirm_career_assist
   - intent: affirm
   - action: utter_confirmed_career_assist
+  - action: action_reset_all_slots
   - action: preference_form
   - active_loop: preference_form
 
@@ -27,392 +28,18 @@ rules:
   - action: preference_form
   - active_loop: null
   - slot_was_set:
-  - requested_slot: null
+    - requested_slot: null
   - action: utter_greet2
 
-- rule: Ask About Game Designer Role
-  steps:
-  - intent: ask_what_game_designer
-  - action: utter_game_designer_info
 
-- rule: Ask About Game Designer Skills
+- rule: Cancel preference form
+  condition:
+  - active_loop: preference_form
   steps:
-  - intent: ask_game_designer_skills
-  - action: utter_game_designer_skills_info
+  - intent: deny
+  - action: action_deactivate_loop
+  - active_loop: null
+  - slot_was_set:
+      - requested_slot: null
+  - action: utter_greet2
 
-- rule: Ask About Game Designer Salary
-  steps:
-  - intent: ask_game_designer_salary
-  - action: utter_game_designer_salary_info
-
-- rule: Ask About Game Designer Education
-  steps:
-  - intent: ask_game_designer_education
-  - action: utter_game_designer_education_info
-
-- rule: Ask About Game Designer Growth
-  steps:
-  - intent: ask_game_designer_growth
-  - action: utter_game_designer_growth_info
-
-- rule: Ask About Game Designer Challenges
-  steps:
-  - intent: ask_game_designer_challenges
-  - action: utter_game_designer_challenges_info
-
-- rule: Ask About Game Artist Role
-  steps:
-  - intent: ask_what_game_artist
-  - action: utter_game_artist_info
-
-- rule: Ask About Game Artist Skills
-  steps:
-  - intent: ask_game_artist_skills
-  - action: utter_game_artist_skills_info
-
-- rule: Ask About Game Artist Salary
-  steps:
-  - intent: ask_game_artist_salary
-  - action: utter_game_artist_salary_info
-
-- rule: Ask About Game Artist Education
-  steps:
-  - intent: ask_game_artist_education
-  - action: utter_game_artist_education_info
-
-- rule: Ask About Game Artist Growth
-  steps:
-  - intent: ask_game_artist_growth
-  - action: utter_game_artist_growth_info
-
-- rule: Ask About Game Artist Challenges
-  steps:
-  - intent: ask_game_artist_challenges
-  - action: utter_game_artist_challenges_info
-
-- rule: Ask About Game Programmer Role
-  steps:
-  - intent: ask_what_game_programmer
-  - action: utter_game_programmer_info
-
-- rule: Ask About Game Programmer Skills
-  steps:
-  - intent: ask_game_programmer_skills
-  - action: utter_game_programmer_skills_info
-
-- rule: Ask About Game Programmer Salary
-  steps:
-  - intent: ask_game_programmer_salary
-  - action: utter_game_programmer_salary_info
-
-- rule: Ask About Game Programmer Education
-  steps:
-  - intent: ask_game_programmer_education
-  - action: utter_game_programmer_education_info
-
-- rule: Ask About Game Programmer Growth
-  steps:
-  - intent: ask_game_programmer_growth
-  - action: utter_game_programmer_growth_info
-
-- rule: Ask About Game Programmer Challenges
-  steps:
-  - intent: ask_game_programmer_challenges
-  - action: utter_game_programmer_challenges_info
-
-- rule: Respond to ask_about_narrative_designer_role
-  steps:
-  - intent: ask_what_narrative_designer
-  - action: utter_narrative_designer_info
-
-- rule: Respond to ask_about_narrative_designer_skills
-  steps:
-  - intent: ask_narrative_designer_skills
-  - action: utter_narrative_designer_skills_info
-
-- rule: Respond to ask_about_narrative_designer_salary
-  steps:
-  - intent: ask_narrative_designer_salary
-  - action: utter_narrative_designer_salary_info
-
-- rule: Respond to ask_about_narrative_designer_education
-  steps:
-  - intent: ask_narrative_designer_education
-  - action: utter_narrative_designer_education_info
-
-- rule: Respond to ask_about_narrative_designer_growth
-  steps:
-  - intent: ask_narrative_designer_growth
-  - action: utter_narrative_designer_growth_info
-
-- rule: Respond to ask_about_narrative_designer_challenges
-  steps:
-  - intent: ask_narrative_designer_challenges
-  - action: utter_narrative_designer_challenges_info
-
-- rule: Respond to ask_about_game_designer_versus_artist
-  steps:
-  - intent: ask_game_designer_versus_artist
-  - action: utter_game_designer_versus_artist_info
-
-- rule: Respond to ask_about_associate_game_producer_role
-  steps:
-  - intent: ask_what_associate_game_producer
-  - action: utter_what_associate_game_producer
-
-- rule: Provide guidance on becoming an Associate Game Producer
-  steps:
-  - intent: ask_how_become_associate_game_producer
-  - action: utter_how_become_associate_game_producer
-
-- rule: Respond to ask_about_senior_game_sound_engineer_role
-  steps:
-  - intent: ask_what_senior_game_sound_engineer
-  - action: utter_what_senior_game_sound_engineer
-
-- rule: Provide guidance on becoming a Senior Game Sound Engineer
-  steps:
-  - intent: ask_how_become_senior_game_sound_engineer
-  - action: utter_how_become_senior_game_sound_engineer
-
-- rule: Respond to ask_about_business_dev_specialist_role
-  steps:
-  - intent: ask_what_business_dev_specialist
-  - action: utter_what_business_dev_specialist
-
-- rule: Provide guidance on becoming a Business Development Specialist
-  steps:
-  - intent: ask_how_become_business_dev_specialist
-  - action: utter_how_become_business_dev_specialist
-
-- rule: Respond to ask_BSIT_benefits
-  steps:
-  - intent: ask_BSIT_benefits
-  - action: utter_BSIT_benefits
-
-# - rule: Respond to ask_BSIT_careers
-#   steps:
-#   - intent: ask_BSIT_careers
-#   - action: utter_BSIT_careers
-
-- rule: Respond to ask_BSIT_required_skills
-  steps:
-  - intent: ask_BSIT_required_skills
-  - action: utter_BSIT_required_skills
-
-- rule: Respond to ask_what_web_developer
-  steps:
-  - intent: ask_what_web_developer
-  - action: utter_what_web_developer
-
-# BLIS
-
-- rule: Respond to inquiry about the definition of a librarian
-  steps:
-    - intent: ask_what_librarian
-    - action: utter_what_librarian
-- rule: Respond to inquiry about the definition of an archivist
-  steps:
-    - intent: ask_what_archivist
-    - action: utter_what_archivist
-- rule: Respond to inquiry about the definition of a research specialist
-  steps:
-    - intent: ask_what_research_specialist
-    - action: utter_what_research_specialist
-- rule: Provide guidance on becoming a librarian
-  steps:
-    - intent: ask_how_become_librarian
-    - action: utter_how_become_librarian
-- rule: Provide guidance on becoming an archivist
-  steps:
-    - intent: ask_how_become_archivist
-    - action: utter_how_become_archivist
-- rule: Provide guidance on becoming a research specialist
-  steps:
-    - intent: ask_how_become_research_specialist
-    - action: utter_how_become_research_specialist
-- rule: Provide information about the benefits of LibSci
-  steps:
-    - intent: ask_LibSci_benefits
-    - action: utter_LibSci_benefits
-- rule: Guide users on required skills for LibSci
-  steps:
-    - intent: ask_LibSci_required_skills
-    - action: utter_LibSci_required_skills
-- rule: Respond to ask_help_library_exam
-  steps:
-    - intent: ask_help_library_exam
-    - action: utter_help_library_exam
-
-# BSIS
-- rule: Respond to ask_BSIS_benefits
-  steps:
-  - intent: ask_BSIS_benefits
-  - action: utter_BSIS_benefits
-- rule: Respond to ask_BSIS_required_skills
-  steps:
-  - intent: ask_BSIS_required_skills
-  - action: utter_BSIS_required_skills
-- rule: Respond to ask_BSIS_BSIT_difference
-  steps:
-  - intent: ask_BSIS_BSIT_difference
-  - action: utter_BSIS_BSIT_difference
-  - action: utter_advise_difference_not_matter
-- rule: Respond to ask_BSIT_BSCS_difference
-  steps:
-  - intent: ask_BSIT_BSCS_difference
-  - action: utter_BSIT_BSCS_difference
-  - action: utter_advise_difference_not_matter
-- rule: Respond to ask_BSIS_BSCS_difference
-  steps:
-  - intent: ask_BSIS_BSCS_difference
-  - action: utter_BSIS_BSCS_difference
-  - action: utter_advise_difference_not_matter
-- rule: Respond to ask_BSIS_BSIT_similarities
-  steps:
-  - intent: ask_BSIS_BSIT_similarities
-  - action: utter_BSIS_BSIT_similarities
-  - action: utter_advise_difference_not_matter
-- rule: Respond to ask_BSIT_BSCS_similarities
-  steps:
-  - intent: ask_BSIT_BSCS_similarities
-  - action: utter_BSIT_BSCS_similarities
-  - action: utter_advise_difference_not_matter
-- rule: Respond to ask_BSIS_BSCS_similarities
-  steps:
-  - intent: ask_BSIS_BSCS_similarities
-  - action: utter_BSIS_BSCS_similarities
-  - action: utter_advise_difference_not_matter
-- rule: Respond to ask_what_data_analyst
-  steps:
-  - intent: ask_what_data_analyst
-  - action: utter_what_data_analyst
-- rule: Respond to ask_what_systems_analyst
-  steps:
-  - intent: ask_what_systems_analyst
-  - action: utter_what_systems_analyst
-- rule: Respond to ask_what_project_manager
-  steps:
-  - intent: ask_what_project_manager
-  - action: utter_what_project_manager
-- rule: Route how_become_data_analyst to utter_how_become_data_analyst
-  steps:
-  - intent: ask_how_become_data_analyst
-  - action: utter_how_become_data_analyst
-- rule: Route how_become_systems_analyst to utter_how_become_systems_analyst
-  steps:
-  - intent: ask_how_become_systems_analyst
-  - action: utter_how_become_systems_analyst
-- rule: Route how_become_project_manager to utter_how_become_project_manager
-  steps:
-  - intent: ask_how_become_project_manager
-  - action: utter_how_become_project_manager
-- rule: Respond to ask_other_universities
-  steps:
-- intent: ask_other_universities
-- action: utter_other_universities
-- rule: Respond to inquiry about Solutions Specialist role
-  steps:
-  - intent: ask_what_solutions_specialist
-  - action: utter_what_solutions_specialist
-- rule: Provide guidance on becoming a Solutions Specialist
-  steps:
-  - intent: ask_how_become_solutions_specialist
-  - action: utter_how_become_solutions_specialist
-- rule: Respond to inquiry about Documentation Specialist role
-  steps:
-  - intent: ask_what_documentation_specialist
-  - action: utter_what_documentation_specialist
-
-- rule: Provide guidance on becoming a Documentation Specialist
-  steps:
-  - intent: ask_how_become_documentation_specialist
-  - action: utter_how_become_documentation_specialist
-
-- rule: Respond to inquiry about End User Trainer role
-  steps:
-  - intent: ask_what_end_user_trainer
-  - action: utter_what_end_user_trainer
-
-- rule: Provide guidance on becoming an End User Trainer
-  steps:
-  - intent: ask_how_become_end_user_trainer
-  - action: utter_how_become_end_user_trainer
-
-- rule: Respond to inquiry about Organizational Process Analyst role
-  steps:
-  - intent: ask_what_organizational_process_analyst
-  - action: utter_what_organizational_process_analyst
-
-- rule: Provide guidance on becoming an Organizational Process Analyst
-  steps:
-  - intent: ask_how_become_organizational_process_analyst
-  - action: utter_how_become_organizational_process_analyst
-
-# BSCS
-- rule: Respond to ask_BSCS_benefits
-  steps:
-  - intent: ask_BSCS_benefits
-  - action: utter_BSCS_benefits
-- rule: Respond to ask_BSCS_salary
-  steps:
-  - intent: ask_BSCS_salary
-  - action: utter_BSCS_salary
-
-- rule: Respond to ask_BSCS_required_skills
-  steps:
-  - intent: ask_BSCS_required_skills
-  - action: utter_BSCS_required_skills
-
-- rule: Respond to ask_what_software_developer
-  steps:
-  - intent: ask_what_software_developer
-  - action: utter_what_software_developer
-
-- rule: Respond to ask_what_data_scientist
-  steps:
-  - intent: ask_what_data_scientist
-  - action: utter_what_data_scientist
-
-- rule: Respond to ask_what_cybersecurity_analyst
-  steps:
-  - intent: ask_what_cybersecurity_analyst
-  - action: utter_what_cybersecurity_analyst
-
-- rule: Respond to ask_what_computer_scientist
-  steps:
-  - intent: ask_what_computer_scientist
-  - action: utter_what_computer_scientist
-
-
-- rule: Route how_become_software_developer to utter_how_become_software_developer
-  steps:
-  - intent: ask_how_become_software_developer
-  - action: utter_how_become_software_developer
-
-- rule: Route how_become_data_scientist to utter_how_become_data_scientist
-  steps:
-  - intent: ask_how_become_data_scientist
-  - action: utter_how_become_data_scientist
-
-- rule: Route how_become_cybersecurity_analyst to utter_how_become_cybersecurity_analyst
-  steps:
-  - intent: ask_how_become_cybersecurity_analyst
-  - action: utter_how_become_cybersecurity_analyst
-
-- rule: Route how_become_computer_scientist to utter_how_become_computer_scientist
-  steps:
-  - intent: ask_how_become_computer_scientist
-  - action: utter_how_become_computer_scientist
-
-# Software Engineer stories
-
-- rule: SoftwareEngineerInterest
-  steps:
-  - intent: ask_how_become_software_engineer
-  - action: utter_how_become_software_engineer
-
-- rule: WhatSoftwareEngineer
-  steps:
-  - intent: ask_what_software_engineer
-  - action: utter_what_software_engineer
